First run of Task 2 with some urgent problems to fix
